I tried to understand what had changes but there was simply too much to seperate into different commits: - DataFrameCollector now returns blank instead of None when there are no records - Fixed a problem with graph image rendering - get_frame_stats is no longer static - Lots of commented print statements - Minor change to ReportBuilder - Right box in web dialogs are not initially invisible until you choose an item on the left - Social media page completed

--- a/powermonitorweb/static/powermonitorweb/mainstyle.css
+++ b/powermonitorweb/static/powermonitorweb/mainstyle.css
@@ -310,6 +310,11 @@ div#imageholder
     height: 120px;
 }
 
+#display
+{
+    display:none;
+}
+
 h2
 {
     font-size: 20px;
